# csv-data-processor

./: .gitignore  CHANGELOG.md  CSV-Splitter-GUI.spec  GETTING_STARTED.md  LICENSE  MANIFEST.in  README.md  RELEASES.md  main.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: build-release.yml
build_env/: pyvenv.cfg
build_scripts/: CSV-Data-Processor-macOS.spec  CSV-Data-Processor.spec  CSV-Splitter-GUI-macOS.spec  CSV-Splitter-GUI.spec  build_cross_platform.py  build_macos.sh  build_windows.bat  pyinstaller_spec.py
docs/: ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CODE_SIGNING.md  PROJECT_STRUCTURE.md  USER_GUIDE.md
examples/: generate_test_data.py
src/csv_processor/: __init__.py  exceptions.py  gui.py  logger.py  processor.py  ui_components.py
src/csv_splitter/: __init__.py  config.py  exceptions.py  gui.py  processor.py  ui_components.py
tests/: __init__.py  test_gui_functionality.py  test_modular_app.py
